# virtual_maze_robot_ros

./: README.md
maze/: .editorconfig  README.md  cam.ipynb  final.ipynb  pyproject.toml  setup.cfg
maze/app/: controller.py  display.py  main.py  maze.py  socket.py
robot/: Dockerfile  README.md  run.sh  setup.sh
robot/devel/include/work_smaart/: BatCalc.h  BatCalcRequest.h  BatCalcResponse.h  Bools.h  Num.h  Point32.h  goalPositionAction.h  goalPositionActionFeedback.h  goalPositionActionGoal.h  goalPositionActionResult.h  goalPositionFeedback.h  goalPositionGoal.h  goalPositionResult.h  isGoal.h  isGoalRequest.h  isGoalResponse.h
robot/devel/lib/pkgconfig/: work_smaart.pc
robot/devel/lib/python3/dist-packages/work_smaart/msg/: _Bools.py  _Num.py  _Point32.py  __init__.py  (+7 more)
robot/devel/lib/work_smaart/: Battery  inTheEnd
robot/devel/share/roseus/ros/work_smaart/: manifest.l
robot/devel/share/work_smaart/cmake/: work_smaart-msg-extras.cmake  work_smaart-msg-paths.cmake  work_smaartConfig.cmake
robot/devel/share/work_smaart/msg/: goalPositionAction.msg  goalPositionActionFeedback.msg  goalPositionActionGoal.msg  goalPositionActionResult.msg  goalPositionFeedback.msg  goalPositionGoal.msg  goalPositionResult.msg
robot/src/work_smaart/: CMakeLists.txt  package.xml  work_smaart.launch
robot/src/work_smaart/action/: goalPosition.action
robot/src/work_smaart/msg/: Bools.msg  Goal.msg  Num.msg  Point32.msg
robot/src/work_smaart/src/: Battery.cpp  Battery.h  Camera.py  Cerebro.py  Movement.py
robot/src/work_smaart/srv/: BatCalc.srv  isGoal.srv
(+57 files in other folders)
