[tool.poetry]
name = "matrix"
version = "0.1.0"
description = ""
authors = ["paulowsky <paulocitron99@gmail.com>"]
license = "MIT"
packages = [
    { include = "app" },
    { include = "app/**/*.py" }
]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^2.0.1"
opencv-python = "^4.5.3"

[tool.poetry.scripts]
start = "app:start"

[tool.poetry.dev-dependencies]
yapf = "^0.31"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
